--- a/my_life_django/static/ang/index.html
+++ b/my_life_django/static/ang/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>My Life</title>
+  <title>Slice of life</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
