--- a/static/ang/index.html
+++ b/static/ang/index.html
@@ -6,7 +6,7 @@
   <base href="/">
 
   <!--<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">-->
-  <meta name="viewport" content="user-scalable=no">
+  <meta name="viewport" content="user-scalable=O">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
