--- a/my_life_django/static/ang/index.html
+++ b/my_life_django/static/ang/index.html
@@ -5,8 +5,7 @@
   <title>Slice of life</title>
   <base href="/">
 
-  <!--<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">-->
-  <meta name="viewport" content="user-scalable=O">
+  <meta name="viewport" content="width=device-width, user-scalable=no">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
